syntax = "proto3";

package rorm;


 import "google/protobuf/descriptor.proto";
// import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option go_package = "options";
// option (gogoproto.gogoproto_import) = true ;

extend google.protobuf.ServiceOptions {
    //1-xormEngine  2-xormEngineGroup
    int64   xorm_type  = 44401 ;
    // 1- redis 2-redisCluster
    int64   redis_type =44402 ;
    //
    bool  useNsq = 44403;
    bool  gin_handler = 44406 ;
    bool  grpc_api_imp = 44407 ;
    ApiConfig api_cfg = 44408;
}

extend google.protobuf.MethodOptions {
    RormOptions opts = 44401;
    UidOptions uid = 44402;
    RormApi api = 44403;
}
message ApiConfig {
    string url = 1;
    string provide = 2;
}
message RormApi {
    string method = 1;
    string path = 2;
}
message RormOptions {
    string target = 1;
    string method = 2;
    string param = 3;
    repeated TranOptions sqlx_tran = 4;
    MzsetOptions mzset = 5;
    RormOptions success = 7;
    RormOptions failure = 8;
    string slice = 9;
}

message MzsetOptions {
    string target = 1;
    string method = 2;
    string key = 3;
    string field = 5 ;
    string value = 6 ;
}

message TranOptions{
    string target = 1;
    string method = 2;
    string param = 3 ;
    string slice =4 ;
}
message UidOptions {
    string name = 1;
    string seed = 2 ;
}

message Variable {
    string varName = 1;
    string varType = 2;
}